# lib/api-spec/openapi.yaml
@@ -791,6 +791,10 @@ components:
           type: ["string", "null"]
         adminCcEmail:
           type: ["string", "null"]
+        studentEmailTemplate:
+          type: ["string", "null"]
+        employeeEmailTemplate:
+          type: ["string", "null"]
         createdAt:
           type: string
         updatedAt:
@@ -827,6 +831,10 @@ components:
         tagline:
           type: ["string", "null"]
         adminCcEmail:
+          type: ["string", "null"]
+        studentEmailTemplate:
+          type: ["string", "null"]
+        employeeEmailTemplate:
           type: ["string", "null"]
       required:
         - name
